# deepaco

./: .gitignore  README.md  environment.yml  install_cuda.sh  install_mish_cuda.sh  pycharm.env  requirements.txt  setup.cfg  setup_linux.sh
data/aic22retail/: class_labels.json  generate_yolo_data_multithreaded.py
data/aic22retail/configs_yolov4p5_448/: testA_1.yaml  testA_2.yaml  testA_3.yaml  testA_4.yaml  testA_5.yaml  testB_1.yaml  testB_2.yaml  testB_3.yaml  testB_4.yaml  testB_5.yaml
data/aic22retail/configs_yolov4p5_448_2/: testA_1.yaml  testA_2.yaml  testA_3.yaml  testA_4.yaml  testA_5.yaml  testB_1.yaml  testB_2.yaml  testB_3.yaml  testB_4.yaml  testB_5.yaml
data/aic22retail/configs_yolov4p7_1536/: testA_1.yaml  testA_2.yaml  testA_3.yaml  testA_4.yaml  testA_5.yaml  testB_1.yaml  testB_2.yaml  testB_3.yaml  testB_4.yaml  testB_5.yaml
data/aic22retail/rmois/: testA_1.json  testA_2.json  testA_3.json  testA_4.json
data/aic22retail/test_a/: video_id.txt
install/: environment.yml  install.sh  setup_linux.sh
install/mish-cuda/: setup.py
install/mish-cuda/src/mish_cuda/: __init__.py
install/mish-cuda/test/: perftest.py
scripts/: aci22_train_scaled_yolov4.py  aic22_retail_checkout_all.py  aic22_retail_checkout_all_async.py  aic22retail117.yaml  train_scaled_yolov4.py
src/aic/: __init__.py  builder.py  utils.py
src/aic/camera/: aic22_retail_checkout_camera.py  aic22_retail_checkout_camera_async.py  moi.py  roi.py
src/aic/detectors/: base.py  scaled_yolov4.py  yolov5_v4.py  yolov5_v6_1.py
src/aic/io/: aic_writer.py
src/aic/objects/: __init__.py  base.py  detection.py  product.py
src/aic/pose_estimators/: hand_estimator.py
src/aic/trackers/: base.py  sort.py
src/aic/trackers/motion/: base.py
