#                              _
#                           _ooOoo_
#                          o8888888o
#                          88" . "88
#                          (| -_- |)
#                          O\  =  /O
#                       ____/`---"\____
#                     ."  \\|     |//  `.
#                    /  \\|||  :  |||//  \
#                   /  _||||| -:- |||||_  \
#                   |   | \\\  -  /"| |   |
#                   | \_|  `\`---"//  |_/ |
#                   \  .-\__ `-. -"__/-.  /
#                 ___`. ."  /--.--\  `. ."___
#              ."" "<  `.___\_<|>_/___." _> \"".
#             | | :  `- \`. ;`. _/; ."/ /  ." ; |
#             \  \ `-.   \_\_`. _."_/_/  -" _." /
#   ===========`-.`___`-.__\ \___  /__.-"_."_.-"================
#                           `=--=-"
#

[metadata]
name = aic
version = 2.2.0
description = 'AIC: Solutions to AI City Challenges
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE.txt
author = Long H. Pham
author_email = longpham3105@gmail.com
url = https://github.com/phlong3105/aic22_track4
project_urls =
    Bug Reports = https://github.com/phlong3105/aic22_track4/issues
    Source = https://github.com/phlong3105/aic22_track4
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
keywords =
    ai city challenge

[options]
include_package_data = True
package_dir=
    =src
packages=find:
python_requires = >=3.9
install_requires =
    onevision @ git+https://github.com/phlong3105/onevision.git

[options.packages.find]
where=src

[options.package_data]
* = pretrained/**/*
